gateway/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTP
      name: http
      port: 80
      hostname: '*.jef.app'
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      name: https
      port: 443
      hostname: '*.jef.app'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: jef-app-tls
            group: ''
            kind: Secret
            namespace: gateway
